.provarCaches/00D410000011HE0EAM/objects/rstkf__arcashh__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_arcashh</customHelpPage>
    <description>arcashh__c</description>
    <fields>
        <fullName>Cheque_branch__c</fullName>
        <label>Cheque branch</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DONOTPACKAGE_DATE__c</fullName>
        <label>DONOTPACKAGE_DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DONOTPACKAGE_TEXT__c</fullName>
        <label>DONOTPACKAGE_TEXT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_No__c</fullName>
        <label>Document No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_autosummed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the session totals were set automatically by summing the payment amounts in ARCASHD</description>
        <label>Sum Session Amount from Payments?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_bankhomeexchrate__c</fullName>
        <description>Old help -

This is the exchange rate derived from the current Foreign Exchange Rate Schedule established, representing the Bank&apos;s currency to the given Company&apos;s Home Currency exchange rate.  When not using multi-currency, value is set to 1.</description>
        <label>Exchange Rate (Bank to Home)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_bankhomerounding__c</fullName>
        <inlineHelpText>Cumulative Rounding error due to exchange rates.</inlineHelpText>
        <label>Rounding Var - Bank to Home</label>
        <summarizedField>rstkf__arcashd__c.rstkf__arcashd_bankhomerounding__c</summarizedField>
        <summaryForeignKey>rstkf__arcashd__c.rstkf__arcashd_arcashh__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_bankunapplcashusedup__c</fullName>
        <label>Unapplied Cash Used Up - Bank Currency</label>
        <summarizedField>rstkf__arcashd__c.rstkf__arcashd_bankunapplcashusedup__c</summarizedField>
        <summaryForeignKey>rstkf__arcashd__c.rstkf__arcashd_arcashh__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_bankunappliedcash__c</fullName>
        <label>Unapplied Cash – Bank Currency</label>
        <summarizedField>rstkf__arcashd__c.rstkf__arcashd_bankunappliedcash__c</summarizedField>
        <summaryForeignKey>rstkf__arcashd__c.rstkf__arcashd_arcashh__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_batchamtbank__c</fullName>
        <description>Old text -

The transaction amount from the deposit displayed in Bank Currency. This is calculated using the &apos;Exchange Rate (Bank to Home)&apos; value (as derived from the current Foreign Exchange Rate Schedule).</description>
        <label>Deposit Amount - Bank</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_batchamthome__c</fullName>
        <description>The transaction amount from the deposit displayed in the Home Currency.</description>
        <label>Deposit Amount - Home</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_batchno__c</fullName>
        <label>Deposit Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_checkedouton__c</fullName>
        <description>Date &amp; time when ARCASHH_CHECKEDOUTTO was populated.</description>
        <label>Deposit was Locked on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_checkedoutto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If populated, this record is logically locked by this user.</description>
        <label>Deposit is Locked by</label>
        <referenceTo>rstkf__glusr__c</referenceTo>
        <relationshipLabel>Cash Receipts (Deposit is locked by)</relationshipLabel>
        <relationshipName>arcashhs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_crappliedbank__c</fullName>
        <label>Credits to Cash Applied - Bank Currency</label>
        <summarizedField>rstkf__arcashd__c.rstkf__arcashd_crcashbank__c</summarizedField>
        <summaryForeignKey>rstkf__arcashd__c.rstkf__arcashd_arcashh__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_crappliedhome__c</fullName>
        <label>Credits to Cash Applied - Home Currency</label>
        <summarizedField>rstkf__arcashd__c.rstkf__arcashd_crcashhome__c</summarizedField>
        <summaryForeignKey>rstkf__arcashd__c.rstkf__arcashd_arcashh__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_crosscurrs__c</fullName>
        <label>Ok to Cross Currencies?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Look Within Currency, Then Cross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_crossdiv__c</fullName>
        <label>Ok to Cross Divisions?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Look Within Division, Then Cross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_crossprojects__c</fullName>
        <label>Ok to Cross Projects?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Look Within Project, Then Cross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_depdate__c</fullName>
        <description>Old help -

Defaults to the system date but can be overridden. The Deposit Date is either the date that the cash arrived at the bank or the date the user expects it to arrive, and is the date the user expects to see in Bank Reconciliation.</description>
        <label>Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_depref__c</fullName>
        <label>Deposit Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_discountgracedays__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of days’ grace allowed to customers for recording receipts. For example, customers must pay by month end to qualify for discount and month end falls on a Friday. If a grace period of 3 days is recorded in this field, then a receipt that is recorded on the Monday after month end will be treated as received by month end for the calculation of discounts.

Number of days to extend ARINVDUE_DISCNTDUEDATE for this deposit</description>
        <label>Cash Discount Grace Period (in Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_drappliedbank__c</fullName>
        <label>Debits to Cash Applied - Bank Currency</label>
        <summarizedField>rstkf__arcashd__c.rstkf__arcashd_drcashbank__c</summarizedField>
        <summaryForeignKey>rstkf__arcashd__c.rstkf__arcashd_arcashh__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_drappliedhome__c</fullName>
        <label>Debits to Cash Applied - Home Currency</label>
        <summarizedField>rstkf__arcashd__c.rstkf__arcashd_drcashhome__c</summarizedField>
        <summaryForeignKey>rstkf__arcashd__c.rstkf__arcashd_arcashh__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_glbankacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>rstkf__glbankacct__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>arcashhs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_glcashbank__c</fullName>
        <label>Cash to GL Total - Bank Currency</label>
        <summarizedField>rstkf__arcashd__c.rstkf__arcashd_bankglcash__c</summarizedField>
        <summaryForeignKey>rstkf__arcashd__c.rstkf__arcashd_arcashh__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_glcashhome__c</fullName>
        <label>Cash to GL Total - Home Currency</label>
        <summarizedField>rstkf__arcashd__c.rstkf__arcashd_homeglcash__c</summarizedField>
        <summaryForeignKey>rstkf__arcashd__c.rstkf__arcashd_arcashh__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>arcashhs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_gltxncntl__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Posting Control Record</label>
        <referenceTo>rstkf__gltxncntl__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>arcashhs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_glyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>arcashhs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_homeunapplcashusedup__c</fullName>
        <label>Unapplied Cash Used Up - Home Currency</label>
        <summarizedField>rstkf__arcashd__c.rstkf__arcashd_homeunapplcashusedup__c</summarizedField>
        <summaryForeignKey>rstkf__arcashd__c.rstkf__arcashd_arcashh__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_homeunappliedcash__c</fullName>
        <label>Unapplied Cash – Home Currency</label>
        <summarizedField>rstkf__arcashd__c.rstkf__arcashd_homeunappliedcash__c</summarizedField>
        <summaryForeignKey>rstkf__arcashd__c.rstkf__arcashd_arcashh__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_initialuser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial Owner</label>
        <referenceTo>rstkf__glusr__c</referenceTo>
        <relationshipLabel>Cash Receipts (Initial Owner)</relationshipLabel>
        <relationshipName>arcashhs01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_isdeposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Whole Deposit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_lastuser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Owner</label>
        <referenceTo>rstkf__glusr__c</referenceTo>
        <relationshipLabel>Cash Receipts (Current Owner)</relationshipLabel>
        <relationshipName>arcashhs02</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_netappliedbank__c</fullName>
        <formula>rstkf__arcashh_drappliedbank__c + rstkf__arcashh_glcashbank__c + rstkf__arcashh_bankunappliedcash__c + rstkf__arcashh_bankunapplcashusedup__c - rstkf__arcashh_crappliedbank__c</formula>
        <label>Net Cash Consumed - Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_netappliedhome__c</fullName>
        <formula>rstkf__arcashh_drappliedhome__c + rstkf__arcashh_glcashhome__c + rstkf__arcashh_homeunappliedcash__c + rstkf__arcashh_homeunapplcashusedup__c - rstkf__arcashh_crappliedhome__c</formula>
        <label>Net Cash Consumed - Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_netcashbank2__c</fullName>
        <label>Net Total Consumed - Bank Currency</label>
        <summarizedField>rstkf__arcashd__c.rstkf__arcashd_netcashbank__c</summarizedField>
        <summaryForeignKey>rstkf__arcashd__c.rstkf__arcashd_arcashh__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_netcashbank__c</fullName>
        <label>ZZZ_OBSOLETE</label>
        <summarizedField>rstkf__arcashd__c.rstkf__arcashd_netcashhome__c</summarizedField>
        <summaryForeignKey>rstkf__arcashd__c.rstkf__arcashd_arcashh__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_netcashhome__c</fullName>
        <label>Net Total Consumed - Home Currency</label>
        <summarizedField>rstkf__arcashd__c.rstkf__arcashd_netcashhome__c</summarizedField>
        <summaryForeignKey>rstkf__arcashd__c.rstkf__arcashd_arcashh__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_netcashpay__c</fullName>
        <label>Net Total Consumed - Payment Currency</label>
        <summarizedField>rstkf__arcashd__c.rstkf__arcashd_netcashpay__c</summarizedField>
        <summaryForeignKey>rstkf__arcashd__c.rstkf__arcashd_arcashh__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_nodivisanydiv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unspecified Div Counts as Any Div?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_nopay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_noprojisanyproj__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unspecified Proj Counts as Any Proj?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_openbank__c</fullName>
        <formula>rstkf__arcashh_batchamtbank__c - (rstkf__arcashh_netcashbank2__c + rstkf__arcashh_bankunappliedcash__c + rstkf__arcashh_bankunapplcashusedup__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit Amount Not Yet Applied-Bank Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_openhome__c</fullName>
        <formula>rstkf__arcashh_batchamthome__c - (rstkf__arcashh_netcashhome__c + rstkf__arcashh_homeunappliedcash__c + rstkf__arcashh_homeunapplcashusedup__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit Amount Not Yet Applied-Home Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_outstandingamtbank__c</fullName>
        <formula>rstkf__arcashh_batchamtbank__c - rstkf__arcashh_paymentsbank__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit Amount Outstanding - Bank Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_outstandingamthome__c</fullName>
        <formula>rstkf__arcashh_batchamthome__c - rstkf__arcashh_paymentshome__c</formula>
        <label>Deposit Amount Outstanding - Home Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_paycount__c</fullName>
        <label>Pay Count - Obsolete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_paycountsum__c</fullName>
        <label>Number of Customer Payments</label>
        <summaryForeignKey>rstkf__arcashd__c.rstkf__arcashd_arcashh__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_paymentsbank__c</fullName>
        <label>Sum of Customer Payments - Bank Currency</label>
        <summarizedField>rstkf__arcashd__c.rstkf__arcashd_bankamt__c</summarizedField>
        <summaryForeignKey>rstkf__arcashd__c.rstkf__arcashd_arcashh__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_paymentshome__c</fullName>
        <label>Sum of Customer Payments - Home Currency</label>
        <summarizedField>rstkf__arcashd__c.rstkf__arcashd_homeamt__c</summarizedField>
        <summaryForeignKey>rstkf__arcashd__c.rstkf__arcashd_arcashh__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_period__c</fullName>
        <label>Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_postdate__c</fullName>
        <label>Date Posted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_poststatus__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Entry Incomplete</fullName>
                </value>
                <value>
                    <fullName>Unbatched Postings Complete</fullName>
                    <isActive>false</isActive>
                    <label>Unbatched Postings Complete</label>
                </value>
                <value>
                    <fullName>Unbatched Postings Pending</fullName>
                    <isActive>false</isActive>
                    <label>Unbatched Postings Pending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_postuser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Posting User</label>
        <referenceTo>rstkf__glusr__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>arcashhs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_trandate__c</fullName>
        <description>Old help text - 
Usually the same as the Deposit Date, this is the date that will be used for all GL and AR transactions that result from entering the deposit. Date initially defaults to the system date but can be overridden.</description>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_unapplcashbank__c</fullName>
        <label>Z_OBSOLETE</label>
        <summarizedField>rstkf__arcashd__c.rstkf__arcashd_bankunapplcash__c</summarizedField>
        <summaryForeignKey>rstkf__arcashd__c.rstkf__arcashd_arcashh__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcashh_unapplcashhome__c</fullName>
        <label>Z_OBSOLETE</label>
        <summarizedField>rstkf__arcashd__c.rstkf__arcashd_homeunapplcash__c</summarizedField>
        <summaryForeignKey>rstkf__arcashd__c.rstkf__arcashd_arcashh__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__arcashh_batchno__c</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__arcashh_glcmp__r.rstkf__glcmp_cmpno__r.rstk__sycmp_cmpno__c  &amp; &apos;-&apos; &amp;  rstkf__arcashh_batchno__c</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Cash Receipt</label>
    <listViews>
        <fullName>Cash_Receipts_AC</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arcashh_glcmp__c</columns>
        <columns>rstkf__arcashh_glbankacct__c</columns>
        <columns>rstkf__arcashh_trandate__c</columns>
        <columns>rstkf__arcashh_batchno__c</columns>
        <columns>rstkf__arcashh_poststatus__c</columns>
        <columns>rstkf__arcashh_lastuser__c</columns>
        <columns>rstkf__arcashh_depdate__c</columns>
        <columns>rstkf__arcashh_batchamtbank__c</columns>
        <columns>rstkf__arcashh_batchamthome__c</columns>
        <columns>rstkf__arcashh_netappliedhome__c</columns>
        <columns>rstkf__arcashh_glcashhome__c</columns>
        <columns>rstkf__arcashh_unapplcashhome__c</columns>
        <columns>rstkf__arcashh_depref__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>Cash Receipts_AC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Cash_Receipts</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arcashh_glcmp__c</columns>
        <columns>rstkf__arcashh_glbankacct__c</columns>
        <columns>rstkf__arcashh_trandate__c</columns>
        <columns>rstkf__arcashh_batchno__c</columns>
        <columns>rstkf__arcashh_poststatus__c</columns>
        <columns>rstkf__arcashh_lastuser__c</columns>
        <columns>rstkf__arcashh_depdate__c</columns>
        <columns>rstkf__arcashh_batchamtbank__c</columns>
        <columns>rstkf__arcashh_batchamthome__c</columns>
        <columns>rstkf__arcashh_glcashhome__c</columns>
        <columns>rstkf__arcashh_unapplcashhome__c</columns>
        <columns>rstkf__arcashh_netappliedhome__c</columns>
        <columns>rstkf__arcashh_paymentshome__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/23/2022 12:00 AM</value>
        </filters>
        <label>Cash Receipts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Cash_Receipts_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arcashh_glcmp__c</columns>
        <columns>rstkf__arcashh_glbankacct__c</columns>
        <columns>rstkf__arcashh_trandate__c</columns>
        <columns>rstkf__arcashh_batchno__c</columns>
        <columns>rstkf__arcashh_depref__c</columns>
        <columns>rstkf__arcashh_poststatus__c</columns>
        <columns>rstkf__arcashh_lastuser__c</columns>
        <columns>rstkf__arcashh_depdate__c</columns>
        <columns>rstkf__arcashh_batchamtbank__c</columns>
        <columns>rstkf__arcashh_batchamthome__c</columns>
        <columns>rstkf__arcashh_glcashhome__c</columns>
        <columns>rstkf__arcashh_netappliedhome__c</columns>
        <columns>rstkf__arcashh_paymentshome__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Cash Receipts - Filtered</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Cash_Receipts_Pend</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arcashh_glcmp__c</columns>
        <columns>rstkf__arcashh_glbankacct__c</columns>
        <columns>rstkf__arcashh_trandate__c</columns>
        <columns>rstkf__arcashh_batchno__c</columns>
        <columns>rstkf__arcashh_depref__c</columns>
        <columns>rstkf__arcashh_poststatus__c</columns>
        <columns>rstkf__arcashh_lastuser__c</columns>
        <columns>rstkf__arcashh_depdate__c</columns>
        <columns>rstkf__arcashh_batchamtbank__c</columns>
        <columns>rstkf__arcashh_batchamthome__c</columns>
        <columns>rstkf__arcashh_glcashhome__c</columns>
        <columns>rstkf__arcashh_netappliedhome__c</columns>
        <columns>rstkf__arcashh_paymentshome__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Cash Receipts Pending</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cash Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstkf__Deposit_Reference_not_allow_to_update</fullName>
        <active>true</active>
        <description>Deposit Reference field cannot be updated if the Deposit is in Posted status</description>
        <errorConditionFormula>PRIORVALUE( rstkf__arcashh_depref__c ) &lt;&gt;  rstkf__arcashh_depref__c  &amp;&amp;   ISPICKVAL( rstkf__arcashh_poststatus__c , &apos;Posted&apos;)</errorConditionFormula>
        <errorMessage>Deposit Reference field cannot be updated if the Deposit is in Posted status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__batchamthome_less_than_paymentshome</fullName>
        <active>false</active>
        <description>Deposit Amount - Home cannot be less than the Sum of Customer Payments - Home Currency</description>
        <errorConditionFormula>AND( NOT(ISCHANGED(rstkf__arcashh_depdate__c)),  NOT(ISNEW()),   
ROUND(rstkf__arcashh_batchamthome__c,2) &lt; ROUND(rstkf__arcashh_paymentshome__c,2))</errorConditionFormula>
        <errorDisplayField>rstkf__altextid__c</errorDisplayField>
        <errorMessage>Deposit Amount - Home cannot be less than the Sum of Customer Payments - Home Currency</errorMessage>
    </validationRules>
</CustomObject>